som e alerta quando o tempo acaba

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 </head>
 <body onload="list_update()">
 
+    <audio src="audio/sound.mp3"></audio>
+
     <header>
         <div class="container">
             <h1>Study Focus</h1>
